2003-11-01  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/msgs/nl.msg: Updated messages from Arjen Markus and
	Pascal Scheffers.  Thanks!  [Patch 820519]

2003-10-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkImgPhoto.c (ImgPhotoBlendComplexAlpha): OS X uses
	32bpp images internally always, so make use of the assumption.

2003-10-31  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.c
	* generic/tkTextIndex.c
	* generic/tkTextDisp.c
	* generic/tkTextWind.c
	* generic/tkTextImage.c
	* generic/tkTextTag.c
	* generic/tkTextMark.c
	* generic/tkTextBTree.c
	* generic/tkText.h         
	* doc/text.n
	* tests/text.test
	* tests/textDisp.test
	* tests/textImage.test
	* tests/textIndex.test
	* tests/textWind.test
	* library/text.tcl            
	* generic/tkCanvas.c
	* unix/tkUnixDefault.h
	* win/tkWinDefault.h
	* mac/tkMacDefault.h
	* macosx/tkMacOSXDefault.h        -- TIP 155 implementation
	
	This adds the 'count' and 'replace' subcommands to the text
	widget, the '-blockcursor' option, and in particular provides
	correct, smooth pixel-based scrolling of the widget under all
	circumstances.  See the text.n man page for the complete new
	documentation.  This also fixes [Bug 559450], [Bug 778511],
	[Bug 779174].

	* generic/tkTextDisp.c
	* tests/textDisp.test: tests and fix to the promptly 
	reported [Bug 833627]

2003-10-31  Vince Darley <vincentdarley@users.sourceforge.net>

	* win/tkWinMenu.c: more correct placing of images in compound
	menu entries.

2003-10-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkImgPhoto.c (ImgPhotoBlendComplexAlpha): add alpha
	blending for images with partial transparency.  Only operates for
	15bpp+ display. [Bug 809157]

2003-10-29  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tkUnixRFont.c: Some cleaning up to get the file more in
	lines with the general style guidelines.  [Bug 832091]  Still many
	comments needed (from someone who knows the code!) for the style